# MiniPNG

./: CODING_STYLE.md  Cargo.toml  README.md
src/: dithering.rs  main.rs  median.rs  minify.rs
src/utils/: arg_utils.rs  crc_utils.rs  file_utils.rs  time_utils.rs
